# tamagotchi-p1

./: .gitattributes  .gitignore  CMakeLists.txt  cpu.cxx  cpu.hxx  decode.cxx  frontend.cxx  frontend.hxx  imgui.ini  io.cxx  main.cxx  nibble.hxx  opcode_handlers.cxx  opcodes.def  opcodes.hxx  tama.cxx  tama.hxx  timers.cxx
